# vat-report-core

./: .gitignore  DOCUMENTATION_UPDATE.md  LICENSE  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml
src/vat_report/: __init__.py  fiscal_year_workflow.py  workflow.py
